RESOLVED FIXED117564
[GTK] Explicit include glib.h to avoid compilation errors if libsoup isn't used.
https://bugs.webkit.org/show_bug.cgi?id=117564
Summary [GTK] Explicit include glib.h to avoid compilation errors if libsoup isn't used.
Hugo Parente Lima
Reported 2013-06-12 15:32:15 PDT
This compilation problem happen if you try to use libcurl as network backend because glib.h isn't included by libcurl headers. I know the official and only one supported network backend for GTK port is libSoup, anyway it's a error to not directly include the glib header where using their types besides this help whom are doing tests with libcurl :-)
Attachments
Patch (1.28 KB, patch)
2013-06-12 15:34 PDT, Hugo Parente Lima
no flags
Hugo Parente Lima
Comment 1 2013-06-12 15:34:23 PDT
WebKit Commit Bot
Comment 2 2013-06-12 16:53:13 PDT
Comment on attachment 204539 [details] Patch Clearing flags on attachment: 204539 Committed r151527: <http://trac.webkit.org/changeset/151527>
WebKit Commit Bot
Comment 3 2013-06-12 16:53:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.